--- a/pwm/piezo/src/lib/pwm/CMakeLists.txt
+++ b/pwm/piezo/src/lib/pwm/CMakeLists.txt
@@ -4,5 +4,5 @@ set(SRC_FILES pwm.c
 
 add_library(pwm ${SRC_FILES})
 
-target_link_libraries(pwm pico_stdlib hardware_gpio hardware_pwm)
+target_link_libraries(pwm pico_stdlib hardware_gpio hardware_pwm hardware_clocks)
 target_include_directories(pwm PUBLIC ./include/)
